src/objects/tdc_tsw__SmsConfig__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Default_Phone_Api__c</fullName>
        <label>Default Phone Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Enable_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__NameFieldApiName__c</fullName>
        <label>Name Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__PhoneFieldApiName__c</fullName>
        <label>Phone Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SmsConfig</label>
    <nameField>
        <label>Object Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SmsConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>